[gd_scene load_steps=22 format=2]

[ext_resource path="res://Grafik/opgaver/Tøj sortering/genbrugsstation.png" type="Texture" id=1]
[ext_resource path="res://Grafik/opgaver/Tøj sortering/Bukser_darlig_ddu.png" type="Texture" id=2]
[ext_resource path="res://Grafik/opgaver/affaldsortering/skraldespand_tekstil_ddu.png" type="Texture" id=3]
[ext_resource path="res://Grafik/opgaver/Tøj sortering/good_shirt_ddu.png" type="Texture" id=4]
[ext_resource path="res://scripts/Opgave 2/Gode bukser.gd" type="Script" id=5]
[ext_resource path="res://Grafik/opgaver/Tøj sortering/bukser_ddu.png" type="Texture" id=6]
[ext_resource path="res://scripts/Opgave 2/Toej sortering.gd" type="Script" id=7]
[ext_resource path="res://times.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Grafik/opgaver/affaldsortering/Minigame_lokale_ddu.png" type="Texture" id=9]
[ext_resource path="res://scripts/Opgave 2/Dårlig troeje 1.gd" type="Script" id=10]
[ext_resource path="res://scripts/Opgave 2/God bukser 1.gd" type="Script" id=11]
[ext_resource path="res://scripts/Opgave 2/Dårlig bukser 1.gd" type="Script" id=12]
[ext_resource path="res://scripts/Opgave 2/god troeje 1.gd" type="Script" id=13]
[ext_resource path="res://Grafik/opgaver/Tøj sortering/bad_shirt_ddu.png" type="Texture" id=14]

[sub_resource type="CapsuleShape2D" id=5]
radius = 38.6364
height = 79.9999

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 57.9545, 112.5 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 42.0
height = 118.0

[sub_resource type="DynamicFont" id=6]
size = 46
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 75
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 75
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
size = 75
font_data = ExtResource( 8 )

[node name="Toej sortering" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.9, 1.9 )
script = ExtResource( 7 )

[node name="MinigameLokaleDdu" type="Sprite" parent="."]
position = Vector2( 360, -0.499985 )
scale = Vector2( 1.66927, 1.67 )
texture = ExtResource( 9 )

[node name="StaticBody2D" type="StaticBody2D" parent="MinigameLokaleDdu"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MinigameLokaleDdu/StaticBody2D"]
polygon = PoolVector2Array( -751.227, 445.808, -769.198, 450, -767.401, -450, 765.604, -448.204, 765.604, 445.808, 762.01, 446.407, 762.01, -445.808, -763.807, -442.216, -762.01, 439.82, -748.83, 440.419, 759.613, 445.21 )

[node name="Genbrugsstation" type="Sprite" parent="."]
position = Vector2( 1282, 324 )
scale = Vector2( 1.5, 1.5 )

[node name="Toej" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Områder" type="Control" parent="Toej"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Tekstil" type="Control" parent="Toej/Områder"]
margin_left = -61.0
margin_top = 373.0
margin_right = -21.0
margin_bottom = 413.0

[node name="SkraldespandTekstilDdu" type="Sprite" parent="Toej/Områder/Tekstil"]
position = Vector2( -350, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Tekstil" type="Area2D" parent="Toej/Områder/Tekstil"]

[node name="Tekstil" type="CollisionShape2D" parent="Toej/Områder/Tekstil/Tekstil"]
position = Vector2( -367, 85 )
scale = Vector2( 2.2, 2.2 )
shape = SubResource( 5 )

[node name="Genbrug" type="Control" parent="Toej/Områder"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Genbrug" type="Area2D" parent="Toej/Områder/Genbrug"]

[node name="Genbrug" type="CollisionShape2D" parent="Toej/Områder/Genbrug/Genbrug"]
position = Vector2( 1323.5, 440.5 )
scale = Vector2( 2.2, 2.2 )
shape = SubResource( 10 )

[node name="Genbrugsstation" type="Sprite" parent="Toej/Områder/Genbrug"]
position = Vector2( 1263.68, 390 )
scale = Vector2( 1.13734, 1.24393 )
texture = ExtResource( 1 )

[node name="Tekstil" type="Control" parent="Toej"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Dårlig trøje 1" type="Panel" parent="Toej/Tekstil"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 161.0
margin_top = -360.0
margin_right = 388.0
margin_bottom = -126.0
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Dårlig troeje 1" type="Sprite" parent="Toej/Tekstil/Dårlig trøje 1"]
position = Vector2( 97, 117 )
texture = ExtResource( 14 )

[node name="Dårlig troeje 2" type="Area2D" parent="Toej/Tekstil/Dårlig trøje 1"]

[node name="Dårlig troeje 1" type="CollisionPolygon2D" parent="Toej/Tekstil/Dårlig trøje 1/Dårlig troeje 2"]
polygon = PoolVector2Array( 8, 48, 112, 13, 199, 68, 163, 94, 167, 196, 133, 224, 59, 217, 44, 168, 41, 110 )

[node name="Dårlig bukser 1" type="Panel" parent="Toej/Tekstil"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 472.0
margin_top = -390.0
margin_right = 585.0
margin_bottom = -132.0
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="BukserDarligDdu" type="Sprite" parent="Toej/Tekstil/Dårlig bukser 1"]
position = Vector2( 56, 129 )
texture = ExtResource( 2 )

[node name="Dårlig bukser 1" type="Area2D" parent="Toej/Tekstil/Dårlig bukser 1"]

[node name="Dårlig bukser 1" type="CollisionPolygon2D" parent="Toej/Tekstil/Dårlig bukser 1/Dårlig bukser 1"]
polygon = PoolVector2Array( 19, 4, 100, 4, 106, 43, 108, 199, 66, 207, 44, 245, 0, 241 )

[node name="Genbrug" type="Control" parent="Toej"]
margin_right = 40.0
margin_bottom = 40.0

[node name="god troeje 1" type="Panel" parent="Toej/Genbrug"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 369.0
margin_top = -111.0
margin_right = 618.0
margin_bottom = 126.0
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="GoodShirtDdu" type="Sprite" parent="Toej/Genbrug/god troeje 1"]
position = Vector2( 120, 119 )
texture = ExtResource( 4 )

[node name="God troeje 1" type="Area2D" parent="Toej/Genbrug/god troeje 1"]

[node name="God troeje 1" type="CollisionPolygon2D" parent="Toej/Genbrug/god troeje 1/God troeje 1"]
polygon = PoolVector2Array( 3, 71, 68, 10, 164, 5, 249, 74, 222, 110, 182, 101, 189, 226, 57, 235, 60, 93, 34, 112 )

[node name="God bukser 1" type="Panel" parent="Toej/Genbrug"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 203.0
margin_top = -1.0
margin_right = 321.0
margin_bottom = 253.0
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="God bukser 2" type="Sprite" parent="Toej/Genbrug/God bukser 1"]
position = Vector2( 57, 126 )
texture = ExtResource( 6 )

[node name="God bukser 1" type="Area2D" parent="Toej/Genbrug/God bukser 1"]

[node name="God bukser 1" type="CollisionPolygon2D" parent="Toej/Genbrug/God bukser 1/God bukser 1"]
polygon = PoolVector2Array( 58, 0, 111, 6, 101, 250, 21, 249, 8, 87, 40, 1 )

[node name="Gode bukser" type="Panel" parent="Toej/Genbrug"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 550.0
margin_top = 211.0
margin_right = 664.0
margin_bottom = 465.0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="BukserDdu" type="Sprite" parent="Toej/Genbrug/Gode bukser"]
position = Vector2( 57, 125 )
texture = ExtResource( 6 )

[node name="God bukser 2" type="Area2D" parent="Toej/Genbrug/Gode bukser"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Toej/Genbrug/Gode bukser/God bukser 2"]
position = Vector2( 59, 127 )
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 360, 0 )
zoom = Vector2( 2.5, 2.5 )

[node name="Opgave2" type="ColorRect" parent="."]
visible = false
light_mask = 2
margin_left = -208.0
margin_top = -375.0
margin_right = 970.0
margin_bottom = 345.0
color = Color( 0.168627, 0.545098, 0.156863, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="Opgave2"]
margin_left = 54.0
margin_top = 253.0
margin_right = 1103.0
margin_bottom = 751.0
custom_fonts/normal_font = SubResource( 6 )
text = "                               Godt Gået!!
Det er altid vigtigt at vurdere om dit tøj stadig kan bruges, selvom det ikke er dig selv der skal bruge det. "

[node name="Spil2" type="Button" parent="Opgave2"]
margin_left = 162.0
margin_top = 500.0
margin_right = 412.0
margin_bottom = 636.0
custom_fonts/font = SubResource( 7 )
text = "SPIL IGEN"

[node name="Tilbage2" type="Button" parent="Opgave2"]
margin_left = 662.0
margin_top = 500.0
margin_right = 995.0
margin_bottom = 632.0
custom_fonts/font = SubResource( 8 )
text = "Videre"

[node name="TextEdit" type="TextEdit" parent="Opgave2"]
margin_left = 273.0
margin_top = 60.0
margin_right = 860.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 9 )
text = "        Opgave 2
     Tøj sortering"

[node name="Camera2D2" type="Camera2D" parent="."]
position = Vector2( 350, -10 )
current = true
zoom = Vector2( 4.7, 4.7 )

[connection signal="gui_input" from="Toej/Tekstil/Dårlig trøje 1" to="Toej/Tekstil/Dårlig trøje 1" method="_on_Drlig_trje_1_gui_input"]
[connection signal="area_entered" from="Toej/Tekstil/Dårlig trøje 1/Dårlig troeje 2" to="Toej/Tekstil/Dårlig trøje 1" method="_on_Drlig_trje_2_area_entered"]
[connection signal="gui_input" from="Toej/Tekstil/Dårlig bukser 1" to="Toej/Tekstil/Dårlig bukser 1" method="_on_Drlig_bukser_1_gui_input"]
[connection signal="area_entered" from="Toej/Tekstil/Dårlig bukser 1/Dårlig bukser 1" to="Toej/Tekstil/Dårlig bukser 1" method="_on_Drlig_bukser_1_area_entered"]
[connection signal="gui_input" from="Toej/Genbrug/god troeje 1" to="Toej/Genbrug/god troeje 1" method="_on_god_trje_1_gui_input"]
[connection signal="area_entered" from="Toej/Genbrug/god troeje 1/God troeje 1" to="Toej/Genbrug/god troeje 1" method="_on_God_trje_1_area_entered"]
[connection signal="gui_input" from="Toej/Genbrug/God bukser 1" to="Toej/Genbrug/God bukser 1" method="_on_God_bukser_1_gui_input"]
[connection signal="area_entered" from="Toej/Genbrug/God bukser 1/God bukser 1" to="Toej/Genbrug/God bukser 1" method="_on_God_bukser_1_area_entered"]
[connection signal="gui_input" from="Toej/Genbrug/Gode bukser" to="Toej/Genbrug/Gode bukser" method="_on_Gode_bukser_gui_input"]
[connection signal="area_entered" from="Toej/Genbrug/Gode bukser/God bukser 2" to="Toej/Genbrug/Gode bukser" method="_on_God_bukser_2_area_entered"]
[connection signal="pressed" from="Opgave2/Spil2" to="." method="_on_Spil2_pressed"]
[connection signal="pressed" from="Opgave2/Tilbage2" to="." method="_on_Tilbage2_pressed"]
